package gameLaby.laby;

/**
 * Classe représentant une amulette
 */
public class Amulette extends Element {

    /**
     * Constructeur
     *
     * @param x abscisse
     * @param y ordonnée
     */
    public Amulette(int x, int y) {
        super(x,y);
    }
}
